--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
           div.innerHTML = `<div class="faq-question">Q: ${q.question}</div><div class="faq-answer">A: ${q.answer}</div>`;
           faqsDiv.appendChild(div);
         });
-      <!-- test -->
-    }
+      <!-- redeploy test -->
   </script>
 </body>
 </html> 
