--- a/index.html
+++ b/index.html
@@ -1,39 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Epic Go-Live FAQ Assistant</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    h1 { color: #003366; }
-    .faq-item { margin-bottom: 15px; padding: 10px; border: 1px solid #ddd; border-radius: 6px; }
-    .faq-question { font-weight: bold; margin-bottom: 5px; color: #003366; }
-    .faq-answer { white-space: pre-line; }
-  </style>
+  <title>Test Deploy</title>
 </head>
 <body>
-  <h1>Epic Go-Live FAQ Assistant</h1>
-  <div id="faqs"></div>
-
-  <script>
-    fetch('epic_go_live_faq.json')
-      .then(response => response.json())
-      .then(data => {
-        const container = document.getElementById('faqs');
-        data.departments.forEach(dept => {
-          dept.faq.forEach(faq => {
-            const div = document.createElement('div');
-            div.className = 'faq-item';
-            div.innerHTML = `
-              <div class="faq-question">Q: ${faq.question}</div>
-              <div class="faq-answer">A: ${faq.answer}</div>
-            `;
-            container.appendChild(div);
-          });
-        });
-      });
-  </script>
+  <h1>It works!</h1>
 </body>
 </html>
-<!-- redeploy test -->.
-<!-- redeploy test -->
