--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Test Deploy</title>
+  <title>Epic FAQ Assistant Test</title>
 </head>
 <body>
-  <h1>It works!</h1>
+  <h1>Hello Azure!</h1>
+  <p>This is a test after switching to the main branch.</p>
 </body>
 </html>
-<!-- test trigger -->
