--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Epic FAQ Assistant Test</title>
+  <title>Epic Go-Live FAQ Assistant</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
+    h1 { color: #003366; }
+    .faq-item { margin-bottom: 15px; padding: 10px; background: #fff; border: 1px solid #ddd; border-radius: 6px; }
+    .faq-question { font-weight: bold; margin-bottom: 5px; color: #003366; }
+    .faq-answer { white-space: pre-line; }
+  </style>
 </head>
 <body>
-  <h1>Hello Azure!</h1>
-  <p>This is a test after switching to the main branch.</p>
-</body>
-</html>
+  <h1>Epic Go-Live FAQ Assistant</h1>
+  <div id="faqs">Loading FAQs...</div>
+
+  <script>
+    fetch('epic_go_live_faq.json')
+      .then(response => response.json())
+      .then(data => {
+        const container = document.getElementById('faqs');
+        container.innerHTML = '';
+        data.departments.forEach(dept => {
+          const deptHeader = document.crea
