--- a/index.html
+++ b/index.html
@@ -8,17 +8,12 @@
     body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
     h1 { color: #003366; }
     h2 { color: #0055aa; margin-top: 20px; }
-    .workflow { margin: 10px 0; font-style: italic; color: #444; }
-    .faq-item { 
-      margin-bottom: 15px; 
-      padding: 10px; 
-      background: #fff; 
-      border: 1px solid #ddd; 
-      border-radius: 6px; 
-      box-shadow: 1px 1px 3px rgba(0,0,0,0.05);
-    }
-    .faq-question { font-weight: bold; margin-bottom: 5px; color: #003366; }
-    .faq-answer { white-space: pre-line; }
+    .workflow { margin: 10px 0; padding: 10px; background: #eef; border-left: 4px solid #003366; border-radius: 4px; }
+    .workflow ul { margin: 0; padding-left: 20px; }
+    .faq-item { margin-bottom: 10px; border: 1px solid #ccc; border-radius: 6px; background: #fff; overflow: hidden; }
+    .faq-question { background: #003366; color: #fff; padding: 10px; cursor: pointer; font-weight: bold; }
+    .faq-answer { display: none; padding: 10px; border-top: 1px solid #ccc; }
+    .faq-item.active .faq-answer { display: block; }
     .error { color: red; margin-top: 20px; }
   </style>
 </head>
@@ -49,11 +44,23 @@
           deptHeader.textContent = section.module;
           container.appendChild(deptHeader);
 
-          // Optional workflow
+          // Workflow (split into steps if → is used)
           if (section.workflow) {
             const workflowDiv = document.createElement('div');
             workflowDiv.className = 'workflow';
-            workflowDiv.textContent = "Workflow: " + section.workflow;
+            const steps = section.workflow.split("→").map(s => s.trim()).filter(s => s);
+            if (steps.length > 1) {
+              const ul = document.createElement('ul');
+              steps.forEach(step => {
+                const li = document.createElement('li');
+                li.textContent = step;
+                ul.appendChild(li);
+              });
+              workflowDiv.innerHTML = "<strong>Workflow:</strong>";
+              workflowDiv.appendChild(ul);
+            } else {
+              workflowDiv.textContent = "Workflow: " + section.workflow;
+            }
             container.appendChild(workflowDiv);
           }
 
@@ -66,6 +73,9 @@
                 <div class="faq-question">Q: ${item.q}</div>
                 <div class="faq-answer">A: ${item.a}</div>
               `;
+              div.querySelector('.faq-question').addEventListener('click', () => {
+                div.classList.toggle('active');
+              });
               container.appendChild(div);
             });
           }
