--- a/index.html
+++ b/index.html
@@ -4,87 +4,148 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Epic Go-Live FAQ Assistant</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
-    h1 { color: #003366; }
-    h2 { color: #0055aa; margin-top: 20px; }
-    .workflow { margin: 10px 0; padding: 10px; background: #eef; border-left: 4px solid #003366; border-radius: 4px; }
-    .workflow ul { margin: 0; padding-left: 20px; }
-    .faq-item { margin-bottom: 10px; border: 1px solid #ccc; border-radius: 6px; background: #fff; overflow: hidden; }
-    .faq-question { background: #003366; color: #fff; padding: 10px; cursor: pointer; font-weight: bold; }
-    .faq-answer { display: none; padding: 10px; border-top: 1px solid #ccc; }
-    .faq-item.active .faq-answer { display: block; }
+    body { font-family: 'Roboto', sans-serif; margin: 0; background: #f4f6f9; color: #333; }
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background: linear-gradient(90deg, #003366, #0055aa);
+      color: #fff;
+      padding: 15px 20px;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+    #searchBox {
+      width: 90%;
+      max-width: 600px;
+      padding: 10px;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-top: 10px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+    main { max-width: 900px; margin: 30px auto; padding: 0 20px; }
+    h2 { color: #003366; margin-top: 30px; border-bottom: 2px solid #003366; padding-bottom: 5px; }
+    .faq-item {
+      margin: 10px 0;
+      border-radius: 6px;
+      background: #fff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      overflow: hidden;
+      transition: all 0.3s ease;
+    }
+    .faq-question {
+      background: #0055aa;
+      color: #fff;
+      padding: 15px;
+      cursor: pointer;
+      font-weight: bold;
+      position: relative;
+    }
+    .faq-question::after {
+      content: '+';
+      position: absolute;
+      right: 20px;
+      font-size: 1.2rem;
+      transition: transform 0.3s ease;
+    }
+    .faq-item.active .faq-question::after { content: '-'; }
+    .faq-answer {
+      max-height: 0;
+      overflow: hidden;
+      padding: 0 15px;
+      background: #fafafa;
+      transition: max-height 0.3s ease, padding 0.3s ease;
+    }
+    .faq-item.active .faq-answer {
+      max-height: 1000px;
+      padding: 15px;
+    }
+    ol { margin: 10px 0 0 20px; }
     .error { color: red; margin-top: 20px; }
   </style>
 </head>
 <body>
-  <h1>Epic Go-Live FAQ Assistant</h1>
-  <div id="faqs">Loading FAQs...</div>
+  <header>
+    Epic Go-Live FAQ Assistant
+    <br>
+    <input type="text" id="searchBox" placeholder="🔍 Search FAQs by keyword...">
+  </header>
+
+  <main>
+    <div id="faqs">Loading FAQs...</div>
+  </main>
 
   <script>
-    fetch('epic_go_live_faq.json')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error("Failed to load FAQ file: " + response.status);
-        }
-        return response.json();
-      })
-      .then(data => {
-        const container = document.getElementById('faqs');
-        container.innerHTML = '';
+    let allData = [];
 
-        if (!Array.isArray(data) || data.length === 0) {
-          container.innerHTML = '<p>No FAQs available.</p>';
-          return;
-        }
+    function renderFAQs(data, query = "") {
+      const container = document.getElementById('faqs');
+      container.innerHTML = '';
 
-        data.forEach(section => {
-          // Section header
+      if (!Array.isArray(data) || data.length === 0) {
+        container.innerHTML = '<p>No FAQs available.</p>';
+        return;
+      }
+
+      data.forEach(section => {
+        const filteredFaqs = (section.qa || []).filter(item =>
+          item.q.toLowerCase().includes(query.toLowerCase()) ||
+          item.a.toLowerCase().includes(query.toLowerCase())
+        );
+
+        if (filteredFaqs.length > 0 || query === "") {
           const deptHeader = document.createElement('h2');
           deptHeader.textContent = section.module;
           container.appendChild(deptHeader);
 
-          // Workflow (split into steps if → is used)
-          if (section.workflow) {
-            const workflowDiv = document.createElement('div');
-            workflowDiv.className = 'workflow';
-            const steps = section.workflow.split("→").map(s => s.trim()).filter(s => s);
-            if (steps.length > 1) {
-              const ul = document.createElement('ul');
-              steps.forEach(step => {
-                const li = document.createElement('li');
-                li.textContent = step;
-                ul.appendChild(li);
-              });
-              workflowDiv.innerHTML = "<strong>Workflow:</strong>";
-              workflowDiv.appendChild(ul);
-            } else {
-              workflowDiv.textContent = "Workflow: " + section.workflow;
-            }
-            container.appendChild(workflowDiv);
-          }
+          filteredFaqs.forEach(item => {
+            const div = document.createElement('div');
+            div.className = 'faq-item';
 
-          // FAQs
-          if (section.qa && section.qa.length > 0) {
-            section.qa.forEach(item => {
-              const div = document.createElement('div');
-              div.className = 'faq-item';
-              div.innerHTML = `
-                <div class="faq-question">Q: ${item.q}</div>
-                <div class="faq-answer">A: ${item.a}</div>
-              `;
-              div.querySelector('.faq-question').addEventListener('click', () => {
-                div.classList.toggle('active');
+            let answerHTML = `<div class="faq-answer">A: ${item.a}`;
+            if (item.steps && item.steps.length > 0) {
+              answerHTML += "<br><br><strong>Click-by-Click Steps:</strong><ol>";
+              item.steps.forEach(step => {
+                answerHTML += `<li>${step}</li>`;
               });
-              container.appendChild(div);
+              answerHTML += "</ol>";
+            }
+            answerHTML += "</div>";
+
+            div.innerHTML = `
+              <div class="faq-question">Q: ${item.q}</div>
+              ${answerHTML}
+            `;
+
+            div.querySelector('.faq-question').addEventListener('click', () => {
+              div.classList.toggle('active');
             });
-          }
+
+            container.appendChild(div);
+          });
+        }
+      });
+    }
+
+    fetch('epic_go_live_faq.json')
+      .then(response => {
+        if (!response.ok) throw new Error("Failed to load FAQ file: " + response.status);
+        return response.json();
+      })
+      .then(data => {
+        allData = data;
+        renderFAQs(allData);
+
+        document.getElementById('searchBox').addEventListener('input', (e) => {
+          renderFAQs(allData, e.target.value);
         });
       })
       .catch(err => {
         document.getElementById('faqs').innerHTML =
-          '<p class="error">⚠️ Error loading FAQs: ' + err.message + '</p>';
-      });
-  </script>
-</body>
-</html>
+          '<p class="error">⚠️ Error loading FAQs: ' + err.me
