--- a/index.html
+++ b/index.html
@@ -1,47 +1,119 @@
-<script>
-  fetch('epic_go_live_faq.json')
-    .then(response => response.json())
-    .then(data => {
-      const container = document.getElementById('faqs');
-      container.innerHTML = '';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Epic Go-Live FAQ Assistant</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Roboto', sans-serif; margin: 0; background: #f4f6f9; color: #333; }
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background: linear-gradient(90deg, #003366, #0055aa);
+      color: #fff;
+      padding: 15px 20px;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+    main { max-width: 900px; margin: 30px auto; padding: 0 20px; }
+    h2 { color: #003366; margin-top: 30px; border-bottom: 2px solid #003366; padding-bottom: 5px; }
+    .faq-item {
+      margin: 10px 0;
+      border-radius: 6px;
+      background: #fff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      overflow: hidden;
+      transition: all 0.3s ease;
+    }
+    .faq-question {
+      background: #0055aa;
+      color: #fff;
+      padding: 15px;
+      cursor: pointer;
+      font-weight: bold;
+      position: relative;
+    }
+    .faq-question::after {
+      content: '+';
+      position: absolute;
+      right: 20px;
+      font-size: 1.2rem;
+      transition: transform 0.3s ease;
+    }
+    .faq-item.active .faq-question::after { content: '-'; }
+    .faq-answer {
+      max-height: 0;
+      overflow: hidden;
+      padding: 0 15px;
+      background: #fafafa;
+      transition: max-height 0.3s ease, padding 0.3s ease;
+    }
+    .faq-item.active .faq-answer {
+      max-height: 1000px;
+      padding: 15px;
+    }
+    ol { margin: 10px 0 0 20px; }
+    .error { color: red; margin-top: 20px; }
+  </style>
+</head>
+<body>
+  <header>
+    Epic Go-Live FAQ Assistant
+  </header>
 
-      data.forEach(section => {
-        // Module header
-        const deptHeader = document.createElement('h2');
-        deptHeader.textContent = section.module;
-        container.appendChild(deptHeader);
+  <main>
+    <div id="faqs">Loading FAQs...</div>
+  </main>
 
-        // Questions inside module
-        section.qa.forEach(item => {
-          const div = document.createElement('div');
-          div.className = 'faq-item';
+  <script>
+    fetch('epic_go_live_faq.json')
+      .then(response => response.json())
+      .then(data => {
+        const container = document.getElementById('faqs');
+        container.innerHTML = '';
 
-          let answerHTML = `<div class="faq-answer">A: ${item.a || "No answer provided"}`;
-          if (item.steps && item.steps.length > 0) {
-            answerHTML += "<br><br><strong>Click-by-Click Steps:</strong><ol>";
-            item.steps.forEach(step => {
-              answerHTML += `<li>${step}</li>`;
+        data.forEach(section => {
+          // Module header
+          const deptHeader = document.createElement('h2');
+          deptHeader.textContent = section.module;
+          container.appendChild(deptHeader);
+
+          // Questions inside module
+          section.qa.forEach(item => {
+            const div = document.createElement('div');
+            div.className = 'faq-item';
+
+            let answerHTML = `<div class="faq-answer">A: ${item.a || "No answer provided"}`;
+            if (item.steps && item.steps.length > 0) {
+              answerHTML += "<br><br><strong>Click-by-Click Steps:</strong><ol>";
+              item.steps.forEach(step => {
+                answerHTML += `<li>${step}</li>`;
+              });
+              answerHTML += "</ol>";
+            }
+            answerHTML += "</div>";
+
+            div.innerHTML = `
+              <div class="faq-question">Q: ${item.q}</div>
+              ${answerHTML}
+            `;
+
+            div.querySelector('.faq-question').addEventListener('click', () => {
+              div.classList.toggle('active');
             });
-            answerHTML += "</ol>";
-          }
-          answerHTML += "</div>";
 
-          div.innerHTML = `
-            <div class="faq-question">Q: ${item.q}</div>
-            ${answerHTML}
-          `;
-
-          // Expand/collapse
-          div.querySelector('.faq-question').addEventListener('click', () => {
-            div.classList.toggle('active');
+            container.appendChild(div);
           });
-
-          container.appendChild(div);
         });
+      })
+      .catch(err => {
+        document.getElementById('faqs').innerHTML =
+          '<p class="error">⚠️ Error loading FAQs: ' + err.message + '</p>';
       });
-    })
-    .catch(err => {
-      document.getElementById('faqs').innerHTML =
-        '<p class="error">⚠️ Error loading FAQs: ' + err.message + '</p>';
-    });
-</script>
+  </script>
+</body>
+</html>
