--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     }
     main { max-width: 900px; margin: 30px auto; padding: 0 20px; }
     h2 { color: #003366; margin-top: 30px; border-bottom: 2px solid #003366; padding-bottom: 5px; }
+    .roles { font-style: italic; margin: 5px 0 10px; color: #444; }
+    .steps { background: #eef; padding: 10px; border-left: 4px solid #0055aa; border-radius: 4px; margin: 10px 0; }
+    .steps ol { margin: 0; padding-left: 20px; }
     .faq-item {
       margin: 10px 0;
       border-radius: 6px;
@@ -76,26 +79,39 @@
         const container = document.getElementById('faqs');
         container.innerHTML = '';
 
-        data.forEach(section => {
+        // Handle either [ ... ] or { "modules": [ ... ] }
+        const sections = Array.isArray(data) ? data : data.modules;
+
+        sections.forEach(section => {
           // Module header
           const deptHeader = document.createElement('h2');
           deptHeader.textContent = section.module;
           container.appendChild(deptHeader);
 
-          // Questions inside module
-          section.qa.forEach(item => {
+          // Roles
+          if (section.roles && section.roles.length > 0) {
+            const roles = document.createElement('div');
+            roles.className = 'roles';
+            roles.textContent = "Roles: " + section.roles.join(', ');
+            container.appendChild(roles);
+          }
+
+          // Steps
+          if (section.steps && section.steps.length > 0) {
+            const stepsDiv = document.createElement('div');
+            stepsDiv.className = 'steps';
+            stepsDiv.innerHTML = "<strong>Workflow Steps:</strong><ol>" +
+              section.steps.map(step => `<li>${step}</li>`).join('') +
+              "</ol>";
+            container.appendChild(stepsDiv);
+          }
+
+          // Q&A
+          (section.qa || []).forEach(item => {
             const div = document.createElement('div');
             div.className = 'faq-item';
 
-            let answerHTML = `<div class="faq-answer">A: ${item.a || "No answer provided"}`;
-            if (item.steps && item.steps.length > 0) {
-              answerHTML += "<br><br><strong>Click-by-Click Steps:</strong><ol>";
-              item.steps.forEach(step => {
-                answerHTML += `<li>${step}</li>`;
-              });
-              answerHTML += "</ol>";
-            }
-            answerHTML += "</div>";
+            let answerHTML = `<div class="faq-answer">A: ${item.a || "No answer provided"}</div>`;
 
             div.innerHTML = `
               <div class="faq-question">Q: ${item.q}</div>
