--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <script>
     async function loadFAQs() {
       try {
-        const response = await fetch("Epic_Master_QA.json");
+        const response = await fetch("epic_go_live_faq.json"); // ✅ fixed filename
         const data = await response.json();
 
         const container = document.getElementById("content");
