--- a/index.html
+++ b/index.html
@@ -65,61 +65,46 @@
         const response = await fetch("epic_go_live_faq.json");
         const data = await response.json();
 
+        const modules = Array.isArray(data) ? data : data.modules || [];
         const container = document.getElementById("content");
         container.innerHTML = "";
 
-        data.forEach(module => {
+        // Separate out Go-Live Prep
+        const goLiveModules = modules.filter(m => m.module === "Go-Live Preparation");
+        const otherModules = modules.filter(m => m.module !== "Go-Live Preparation");
+
+        // Render all non-Go-Live modules first
+        [...otherModules, ...goLiveModules].forEach(module => {
           const moduleDiv = document.createElement("div");
           moduleDiv.innerHTML = `<h2>${module.module}</h2>`;
 
-          // Steps / How To
-          if (module.steps && module.steps.length > 0) {
-            if (module.module.includes("Go-Live Preparation")) {
-              // Special case: show step groups directly (no How To wrapper)
-              module.steps.forEach(stepGroup => {
-                const stepDetails = document.createElement("details");
-                stepDetails.open = false; // collapsed by default
-                stepDetails.innerHTML = `<summary>📌 ${stepGroup.title}</summary>`;
-                const ul = document.createElement("ul");
-                ul.className = "steps";
-                stepGroup.items.forEach(item => {
-                  const li = document.createElement("li");
-                  li.textContent = item;
-                  ul.appendChild(li);
-                });
-                stepDetails.appendChild(ul);
-                moduleDiv.appendChild(stepDetails);
-              });
-            } else {
-              // Default: collapsible "How To" wrapper
-              const howToWrapper = document.createElement("details");
-              howToWrapper.open = false; // collapsed by default
-              howToWrapper.innerHTML = `<summary>📘 How To</summary>`;
+          // Only show How To if steps exist and module is not Go-Live Preparation
+          if (module.steps && module.steps.length > 0 && module.module !== "Go-Live Preparation") {
+            const howToDetails = document.createElement("details"); 
+            howToDetails.innerHTML = `<summary>📘 How To</summary>`;
+            
+            module.steps.forEach(stepGroup => {
+              const stepTitle = document.createElement("h4");
+              stepTitle.textContent = stepGroup.title;
+              howToDetails.appendChild(stepTitle);
 
-              module.steps.forEach(stepGroup => {
-                const stepDetails = document.createElement("details");
-                stepDetails.open = false; // collapsed by default
-                stepDetails.innerHTML = `<summary>${stepGroup.title}</summary>`;
-                const ul = document.createElement("ul");
-                ul.className = "steps";
-                stepGroup.items.forEach(item => {
-                  const li = document.createElement("li");
-                  li.textContent = item;
-                  ul.appendChild(li);
-                });
-                stepDetails.appendChild(ul);
-                howToWrapper.appendChild(stepDetails);
+              const ul = document.createElement("ul");
+              ul.className = "steps";
+              stepGroup.items.forEach(item => {
+                const li = document.createElement("li");
+                li.textContent = item;
+                ul.appendChild(li);
               });
+              howToDetails.appendChild(ul);
+            });
 
-              moduleDiv.appendChild(howToWrapper);
-            }
+            moduleDiv.appendChild(howToDetails);
           }
 
           // FAQs
           if (module.qa && module.qa.length > 0) {
             module.qa.forEach(item => {
               const qaDetails = document.createElement("details");
-              qaDetails.open = false; // collapsed by default
               qaDetails.innerHTML = `<summary>❓ ${item.q}</summary><p>${item.a}</p>`;
               moduleDiv.appendChild(qaDetails);
             });
@@ -128,8 +113,7 @@
           container.appendChild(moduleDiv);
         });
       } catch (error) {
-        document.getElementById("content").innerHTML =
-          `<p style="color:red;">⚠️ Error loading FAQs: ${error.message}</p>`;
+        document.getElementById("content").innerHTML = `<p style="color:red;">⚠️ Error loading FAQs: ${error.message}</p>`;
       }
     }
 
