--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     }
     h2 {
       color: #003366;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.3rem;
     }
     details {
-      margin-bottom: 1rem;
+      margin: 0.5rem 0;
       border: 1px solid #ddd;
       border-radius: 6px;
       padding: 0.5rem 1rem;
@@ -41,13 +43,20 @@
       font-weight: bold;
       color: #003366;
     }
-    .steps {
+    .steps, .faq, .study {
       margin: 0.5rem 0 0.5rem 1rem;
       padding-left: 1rem;
       border-left: 3px solid #003366;
     }
     .steps li {
       margin: 0.3rem 0;
+    }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -65,66 +74,58 @@
         const response = await fetch("epic_go_live_faq.json");
         const data = await response.json();
 
+        const modules = Array.isArray(data) ? data : data.modules;
         const container = document.getElementById("content");
         container.innerHTML = "";
-
-        const modules = data.modules || data;
 
         modules.forEach(module => {
           const moduleDiv = document.createElement("div");
           moduleDiv.innerHTML = `<h2>${module.module}</h2>`;
 
-          // How To section
+          // How To Section
           if (module.steps && module.steps.length > 0) {
-            module.steps.forEach(section => {
-              const details = document.createElement("details");
-              details.innerHTML = `<summary>📘 How To: ${section.title}</summary>`;
+            const howToDetails = document.createElement("details");
+            howToDetails.innerHTML = `<summary>📘 How To</summary>`;
+
+            module.steps.forEach(step => {
+              const stepDetails = document.createElement("details");
+              stepDetails.innerHTML = `<summary>${step.title}</summary>`;
               const ul = document.createElement("ul");
               ul.className = "steps";
-              section.items.forEach(item => {
+              step.items.forEach(item => {
                 const li = document.createElement("li");
                 li.textContent = item;
                 ul.appendChild(li);
               });
-              details.appendChild(ul);
-              moduleDiv.appendChild(details);
+              stepDetails.appendChild(ul);
+              howToDetails.appendChild(stepDetails);
             });
+
+            moduleDiv.appendChild(howToDetails);
           }
 
-          // FAQs
+          // FAQ Section
           if (module.qa && module.qa.length > 0) {
+            const faqDetails = document.createElement("details");
+            faqDetails.innerHTML = `<summary>❓ FAQs</summary>`;
             module.qa.forEach(item => {
-              const qaDetails = document.createElement("details");
-              qaDetails.innerHTML = `<summary>❓ ${item.q}</summary><p>${item.a}</p>`;
-              moduleDiv.appendChild(qaDetails);
+              const qDetails = document.createElement("details");
+              qDetails.innerHTML = `<summary>${item.q}</summary><p>${item.a}</p>`;
+              faqDetails.appendChild(qDetails);
             });
+            moduleDiv.appendChild(faqDetails);
           }
 
-          // Study Materials
-          const linksSection = document.createElement("details");
-          linksSection.innerHTML = `<summary>📎 Study Materials</summary>`;
-          const ul = document.createElement("ul");
-          ul.className = "steps";
-
-          if (module.links && module.links.length > 0) {
-            module.links.forEach(link => {
-              const li = document.createElement("li");
-              li.innerHTML = `<a href="${link.url}" target="_blank">${link.title}</a>`;
-              ul.appendChild(li);
-            });
-          } else {
-            const li = document.createElement("li");
-            li.textContent = "No study materials linked yet.";
-            ul.appendChild(li);
-          }
-
-          linksSection.appendChild(ul);
-          moduleDiv.appendChild(linksSection);
+          // Study Materials Section
+          const studyDetails = document.createElement("details");
+          studyDetails.innerHTML = `<summary>📂 Study Materials</summary>
+            <div class="study"><p><a href="#">(Placeholder link to study materials)</a></p></div>`;
+          moduleDiv.appendChild(studyDetails);
 
           container.appendChild(moduleDiv);
         });
       } catch (error) {
-        document.getElementById("content").innerHTML =
+        document.getElementById("content").innerHTML = 
           `<p style="color:red;">⚠️ Error loading FAQs: ${error.message}</p>`;
       }
     }
