--- a/index.html
+++ b/index.html
@@ -74,7 +74,13 @@
         const response = await fetch("epic_go_live_faq.json");
         const data = await response.json();
 
-        const modules = Array.isArray(data) ? data : data.modules;
+        let modules = Array.isArray(data) ? data : data.modules;
+
+        // Pull Go-Live Prep out and append to end
+        const goLive = modules.filter(m => m.module.includes("Go-Live Preparation"));
+        modules = modules.filter(m => !m.module.includes("Go-Live Preparation"));
+        if (goLive.length > 0) modules.push(...goLive);
+
         const container = document.getElementById("content");
         container.innerHTML = "";
 
@@ -82,45 +88,70 @@
           const moduleDiv = document.createElement("div");
           moduleDiv.innerHTML = `<h2>${module.module}</h2>`;
 
-          // How To Section
-          if (module.steps && module.steps.length > 0) {
-            const howToDetails = document.createElement("details");
-            howToDetails.innerHTML = `<summary>📘 How To</summary>`;
-
-            module.steps.forEach(step => {
-              const stepDetails = document.createElement("details");
-              stepDetails.innerHTML = `<summary>${step.title}</summary>`;
-              const ul = document.createElement("ul");
-              ul.className = "steps";
-              step.items.forEach(item => {
-                const li = document.createElement("li");
-                li.textContent = item;
-                ul.appendChild(li);
+          // Special handling for Go-Live Preparation
+          if (module.module.includes("Go-Live Preparation")) {
+            if (module.steps && module.steps.length > 0) {
+              module.steps.forEach(step => {
+                const stepDetails = document.createElement("details");
+                stepDetails.innerHTML = `<summary>${step.title}</summary>`;
+                const ul = document.createElement("ul");
+                ul.className = "steps";
+                step.items.forEach(item => {
+                  const li = document.createElement("li");
+                  li.textContent = item;
+                  ul.appendChild(li);
+                });
+                stepDetails.appendChild(ul);
+                moduleDiv.appendChild(stepDetails);
               });
-              stepDetails.appendChild(ul);
-              howToDetails.appendChild(stepDetails);
-            });
+            }
 
-            moduleDiv.appendChild(howToDetails);
+            if (module.qa && module.qa.length > 0) {
+              module.qa.forEach(item => {
+                const qDetails = document.createElement("details");
+                qDetails.innerHTML = `<summary>${item.q}</summary><p>${item.a}</p>`;
+                moduleDiv.appendChild(qDetails);
+              });
+            }
+          } else {
+            // Normal modules → How To / FAQs / Study Materials
+            if (module.steps && module.steps.length > 0) {
+              const howToDetails = document.createElement("details");
+              howToDetails.innerHTML = `<summary>📘 How To</summary>`;
+
+              module.steps.forEach(step => {
+                const stepDetails = document.createElement("details");
+                stepDetails.innerHTML = `<summary>${step.title}</summary>`;
+                const ul = document.createElement("ul");
+                ul.className = "steps";
+                step.items.forEach(item => {
+                  const li = document.createElement("li");
+                  li.textContent = item;
+                  ul.appendChild(li);
+                });
+                stepDetails.appendChild(ul);
+                howToDetails.appendChild(stepDetails);
+              });
+
+              moduleDiv.appendChild(howToDetails);
+            }
+
+            if (module.qa && module.qa.length > 0) {
+              const faqDetails = document.createElement("details");
+              faqDetails.innerHTML = `<summary>❓ FAQs</summary>`;
+              module.qa.forEach(item => {
+                const qDetails = document.createElement("details");
+                qDetails.innerHTML = `<summary>${item.q}</summary><p>${item.a}</p>`;
+                faqDetails.appendChild(qDetails);
+              });
+              moduleDiv.appendChild(faqDetails);
+            }
+
+            const studyDetails = document.createElement("details");
+            studyDetails.innerHTML = `<summary>📂 Study Materials</summary>
+              <div class="study"><p><a href="#">(Placeholder link to study materials)</a></p></div>`;
+            moduleDiv.appendChild(studyDetails);
           }
-
-          // FAQ Section
-          if (module.qa && module.qa.length > 0) {
-            const faqDetails = document.createElement("details");
-            faqDetails.innerHTML = `<summary>❓ FAQs</summary>`;
-            module.qa.forEach(item => {
-              const qDetails = document.createElement("details");
-              qDetails.innerHTML = `<summary>${item.q}</summary><p>${item.a}</p>`;
-              faqDetails.appendChild(qDetails);
-            });
-            moduleDiv.appendChild(faqDetails);
-          }
-
-          // Study Materials Section
-          const studyDetails = document.createElement("details");
-          studyDetails.innerHTML = `<summary>📂 Study Materials</summary>
-            <div class="study"><p><a href="#">(Placeholder link to study materials)</a></p></div>`;
-          moduleDiv.appendChild(studyDetails);
 
           container.appendChild(moduleDiv);
         });
